# Frugal-AI

./: .env.example  .gitignore  Dockerfile  ISSUES.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-deploy.yml  dashboard.yml  middlewares.yml
ansible/: ansible.cfg  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.yml
classifier/: .dockerignore  .gitignore  Dockerfile  EVALUATION.md  compose.prod.yml  compose.yml  package.json
classifier/oldschool-middleware/: Dockerfile  Gemfile  app.rb
classifier/scripts/: baseline-middleware-compare.ts  (+4 more)
configs/: arena_hard_rubric.example.json  llmproxy-all-connections-router.example.json  llmproxy-boplus-routerbench.example.json  llmproxy-connections.example.json  model_pricing.example.json  model_pricing.website_connections.example.json  ollama-routerbench.example.json  router_registry.example.json  router_registry.website_connections.example.json  svc_middleware_mapping.website_connections.example.json  website-connections-models.example.json
dashboard/: .gitignore  ReadMe.md
docs/: arena-hard-model-card.md  arena-hard-training.md  benchmark-pipeline.md  classifier_api_spec.yaml  operational-plan.md  router-logic.md  svc-middleware-integration-plan.md
evaluation_data/: evaluation_dataset_highScattered.csv
llmproxy/: .dockerignore  .gitignore  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
plans/: architecture.md  implementation.md
scripts/: build_binary_only_manifest.py  build_clean_safe_exact_slice.py  build_dsi_glm_retry_manifest.py  build_high_scatter_slice.py  build_retry_manifests.py  build_run_report.py  merge_dsi_glm_retry.py  predict_arena_hard_criteria.py  prepare_arena_hard_training_data.py  preview_svc_model_route.py  run_arena_hard_roberta_large.ps1  run_arena_hard_transformer_suite.ps1  test_classifier.py  train_arena_hard_classical_models.py  train_arena_hard_classifier.py  train_arena_hard_transformer.py
tests/: conftest.py  test_api.py  test_classifier.py  test_config.py  test_e2e.py  test_feedback.py  test_integration.py  test_main.py  test_models.py  test_report.py  test_router.py  test_telemetry.py
tmp/: highscattered_first30_all_results.csv  highscattered_first30_comparison.json  highscattered_first30_comparison.md  highscattered_first30_direct_baseline.csv  highscattered_first30_energy_proxy_config.json  highscattered_first30_energy_proxy_report.md  highscattered_first30_energy_proxy_rows.csv  highscattered_first30_energy_proxy_summary.json  highscattered_first30_middleware_summary.md  highscattered_first30_result_cache.json
traefik/: app.yml  traefik.yml
training/bert/: README.md  augment_dataset.py  benchmark_onnx.py  eval_dataset.csv  export_onnx.py  infer_onnx.py  main.py  pyproject.toml  serve.py  train.py
training/bert/classifier/: config.py  predictor.py
utils/: download_dataset.py  extract_samples.py  unpack_samples.py
(+689 files in other folders)
