[project]
    name = "frugal-code"
    version = "0.1.0"
    description = "Frugal-AI: Complexity-aware LLM proxy"
    requires-python = ">=3.12"
    dependencies = [
        "fastapi>=0.110.0",
        "uvicorn[standard]>=0.27.0",
        "litellm>=1.30.0",
        "opentelemetry-api>=1.23.0",
        "opentelemetry-sdk>=1.23.0",
        "opentelemetry-exporter-otlp>=1.23.0",
        "opentelemetry-instrumentation-fastapi>=0.44b0",
        "opentelemetry-semantic-conventions>=0.44b0",
        "pydantic>=2.6.0",
        "pydantic-settings>=2.2.0",
        "sse-starlette>=2.0.0",
        "tiktoken>=0.6.0",
        "aiosqlite>=0.19.0",
    ]

[dependency-groups]
    dev = [
        "pytest>=8.0.0",
        "pytest-asyncio>=0.23.0",
        "httpx>=0.27.0",
        "ruff>=0.2.0",
    ]

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[tool.pytest.ini_options]
    asyncio_mode = "auto"
    pythonpath = ["src"]

[tool.ruff]
    line-length = 100
    target-version = "py312"

    [tool.ruff.lint]
        select = ["E", "F", "I"]
        ignore = []
